Fixed card drawing. Fixed bug where the deck color did not change when the player drew from the board